syntax = "proto3";
package org.solana.sealevel.v1;
import "context.proto";

message ELFBinary {
    bytes data = 1;
}

message ELFLoaderCtx {
    ELFBinary elf = 1;
    FeatureSet features = 2;
    uint64 elf_sz = 3;
}

message ELFLoaderEffects {
    bytes rodata = 1;
    uint64 rodata_sz = 2;

    uint64 text_cnt = 4;
    uint64 text_off = 5;

    uint64 entry_pc = 6;

    // TODO: implement this
    repeated uint64 calldests = 7;
}